# a800mon

./: .gitignore  AGENTS.md  Makefile  README.md  SOCKET_PROTOCOL.md  pyproject.toml
a800mon/: actions.py  app.py  appstate.py  cli.py  cpustate.py  datastructures.py  disasm.py  disassembly.py  displaylist.py  history.py  main.py  rpc.py  screenbuffer.py  shortcutbar.py  shortcuts.py  socket.py  topbar.py  ui.py
go800mon/: go.mod  go.sum
go800mon/a800mon/: actions.go  app.go  appstate.go  asmrender.go  atascii.go  breakpoints.go  caps.go  cli.go  cpustate.go  datastructures.go  debug.go  disasm.go  disassembly.go  displaylist.go  emulator.go  history.go  inputwidget.go  main.go  memory.go  memorymap.go  rpc.go  screenbuffer.go  shortcutbar.go  shortcutinput.go  shortcuts.go  socket.go  statusupdater.go  topbar.go  ui.go  util.go  video.go  watchers.go
go800mon/a800mon/cli/: aliases.go  commands_emulator.go  commands_video.go  main.go  types.go
go800mon/a800mon/monitor/: actions.go  appstate.go  main.go  topbar.go  uierror.go  videopreview.go
go800mon/cmd/go800mon/: main.go
go800mon/internal/atascii/: atascii.go
py800mon/: actions.py  app.py  appstate.py  atascii.py  breakpoints.py  cli.py  cpustate.py  datastructures.py  disassembly.py  displaylist.py  emulator.py  history.py  inputwidget.py  main.py  memory.py  memorymap.py  rpc.py  screenbuffer.py  shortcuts.py  socket.py  statusupdater.py  topbar.py  ui.py  video.py  watchers.py
py800mon/cli/: main.py
py800mon/monitor/: appstate.py  main.py  topbar.py  uierror.py  videopreview.py
(+9 files in other folders)
